--- a/webpages/teacher_dashboard/index.html
+++ b/webpages/teacher_dashboard/index.html
@@ -5,24 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src = "javascript.js"></script>
 </head>
 <body>
-    <div class = "header">
-        <img class = "menuIcon" src = "images/menu-icon.svg" alt = "Menu">
+    <header class = "header">
+        <button class = "hamberger">
+            <div class = "navbar"></div>
+        </button>
         <button class = "logOut">Log Out</button>
-    </div>
-    <div class = "mainPage">
-        <div class = "profile">
+    </header>
+
+    <!-- <nav class = "navigation">
+        <a class = "dashboard" href = "#">Dashboard</a>
+        <a class = "sem-1" href = "#">Sem-1</a>
+        <a class = "sem-2" href = "#">Sem-2</a>
+    </nav> -->
+
+    <section class = "mainPage">
+        <section class = "profile">
             <img class = "profilePic" src = "images/temp.png" alt="Your Profile Pic">
             <div class = "profileText">
                 <div class = "name">John Doe</div>
                 <div class = "designation">Assistant Professor</div>
                 <div class = "department">Department of CSE</div>
             </div>
-        </div>
-        <div class = "options">
+        </section>
+        
+        <section class = "options">
             <button class = "createClass">Create Class</button>
-        </div>
-    </div>
+        </section>
+    </section>
 </body>
 </html>
