Added Menu bar functionality for teacher dashboard

--- a/webpages/teacher_dashboard/index.html
+++ b/webpages/teacher_dashboard/index.html
@@ -15,11 +15,11 @@
         <button class = "logOut">Log Out</button>
     </header>
 
-    <!-- <nav class = "navigation">
+    <nav class = "navigation">
         <a class = "dashboard" href = "#">Dashboard</a>
         <a class = "sem-1" href = "#">Sem-1</a>
         <a class = "sem-2" href = "#">Sem-2</a>
-    </nav> -->
+    </nav>
 
     <section class = "mainPage">
         <section class = "profile">
