--- a/webpages/teacher_dashboard/index.html
+++ b/webpages/teacher_dashboard/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class = "header">
-        <button class = "hamberger">
+        <button class = "hamburger">
             <div class = "navbar"></div>
         </button>
         <button class = "logOut">Log Out</button>
@@ -17,8 +17,7 @@
 
     <nav class = "navigation">
         <a class = "dashboard" href = "#">Dashboard</a>
-        <a class = "sem-1" href = "#">Sem-1</a>
-        <a class = "sem-2" href = "#">Sem-2</a>
+        <a class = "sem-1" href = "#">My Classes</a>
     </nav>
 
     <section class = "mainPage">
@@ -32,7 +31,7 @@
         </section>
         
         <section class = "options">
-            <button class = "createClass">Create Class</button>
+            <!-- <button class = "createClass">Create Class</button> -->
         </section>
     </section>
 </body>
