Changed background and styling for teacher dashboard

--- a/webpages/teacher_dashboard/index.html
+++ b/webpages/teacher_dashboard/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <nav class = "navigation">
-        <a class = "dashboard" href = "#">Dashboard</a>
-        <a class = "sem-1" href = "#">My Classes</a>
+        <a class = "dashboard" href = "../teacher_dashboard/index.html">Dashboard</a>
+        <a class = "myClasses" href = "../myClasses/index.html">My Classes</a>
     </nav>
 
     <section class = "mainPage">
