--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src = "javascript.js"></script>
 </head>
 <body>
+    <header class = "header">
+        <button class = "hamburger">
+            <div class = "navbar"></div>
+        </button>
+        <!-- <button class = "logOut">Log Out</button> -->
+    </header>
+
+    <nav class = "navigation">
+        <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
+    </nav>
+
     <div>
         <a href = "./webpages/teacher_dashboard/index.html">Teacher Dashboard</a>
+        <a href = "./webpages/myClasses/index.html">My Classes</a>
     </div>
 </body>
 </html>
