--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div>
         <a href = "./webpages/teacher_dashboard/index.html">Teacher Dashboard</a>
-        <a href = "./webpages/myClasses/index.html">My Classes</a>
+        <a href = "./webpages/login/index.html">Login Page</a>
     </div>
 </body>
 </html>
