Styling Login Page

--- a/webpages/login/index.html
+++ b/webpages/login/index.html
@@ -19,8 +19,21 @@
         <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
     </nav>
 
-    <div>
-        
+    <div class = "mainPage">
+        <div class = "loginContainer">
+            <div class = "loginText">Login</div>
+            <form class = "loginInput">
+                <div class = "email">
+                    <label for="fname" class = "text">Email</label>
+                    <input type="text" id="fname" name="fname" class = "box">
+                </div> 
+                <div class = "password">
+                    <label for="lname" class = "password">Password</label>
+                    <input type="password" id="lname" name="lname" class = "box">
+                </div>
+            </form>
+            <button class = "loginButton">Login</button>
+        </div>
     </div>
 </body>
 </html>
