--- a/webpages/login/index.html
+++ b/webpages/login/index.html
@@ -28,7 +28,7 @@
                     <input type="text" id="fname" name="fname" class = "box">
                 </div> 
                 <div class = "password">
-                    <label for="lname" class = "password">Password</label>
+                    <label for="lname" class = "text">Password</label>
                     <input type="password" id="lname" name="lname" class = "box">
                 </div>
             </form>
