--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src = "javascript.js"></script>
+    <link rel="stylesheet" href="./menu.css">
+    <script defer src = "menu.js"></script>
 </head>
 <body>
     <header class = "header">
