--- a/webpages/teacher_dashboard/index.html
+++ b/webpages/teacher_dashboard/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src = "javascript.js"></script>
+    <link rel="stylesheet" href="../../menu.css">
+    <script defer src = "../../menu.js"></script>
 </head>
 <body>
     <header class = "header">
@@ -21,7 +22,7 @@
     </nav>
 
     <section class = "mainPage">
-        <section class = "profile">
+        <section class = "profile panel">
             <img class = "profilePic" src = "images/temp.png" alt="Your Profile Pic">
             <div class = "profileText">
                 <div class = "name">John Doe</div>
@@ -30,8 +31,27 @@
             </div>
         </section>
         
-        <section class = "options">
-            <!-- <button class = "createClass">Create Class</button> -->
+        <section class = "table panel">
+            <div class = "heading">
+                <span class = "code" >Code</span>
+                <span class = "subject">Subject Name<span>
+            </div>
+            <a class = "entry" href = "#">
+                <span class = "code">HSP101</span>
+                <span class = "subject">Communication Skills<span>
+            </a>
+            <a class = "entry" href = "#">
+                <span class = "code">CST102</span>
+                <span class = "subject">Data Structure and Algorithms<span>
+            </a>
+            <a class = "entry" href = "#">
+                <span class = "code">ECT103</span>
+                <span class = "subject">Circuit Theory<span>
+                </a>
+            <a class = "entry" href = "#">
+                <span class = "code">ECT101</span>
+                <span class = "subject">Digital Design<span>
+            </a>
         </section>
     </section>
 </body>
