Removed menuTemp.css and menuTemp.js, added access for lecture list page on landing page

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     </nav>
 
     <div>
-        <a href = "./webpages/teacher_dashboard/index.html">Teacher Dashboard</a>
-        <a href = "./webpages/login/index.html">Login Page</a>
+        <a href = "./webpages/teacher_dashboard/index.html">Teacher Dashboard</a><br>
+        <a href = "./webpages/login/index.html">Login Page</a><br>
+        <a href = "./webpages/lecture_list/index.html">Lecture List Page</a><br>
     </div>
 </body>
 </html>
