--- a/webpages/lecture_list/index.html
+++ b/webpages/lecture_list/index.html
@@ -6,7 +6,7 @@
     <title>Lecture List</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../menu.css">
-    <script defer src = "menuTemp.js"></script>
+    <script defer src = "menu.js"></script>
 </head>
 <body>
     <header class = "header">
