Updated a lot of stuff

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./menu.css">
+    <link rel="stylesheet" href="./tables.css">
     <script defer src = "menu.js"></script>
 </head>
 <body>
@@ -24,6 +25,7 @@
         <a href = "./webpages/teacher_dashboard/index.html">Teacher Dashboard</a><br>
         <a href = "./webpages/login/index.html">Login Page</a><br>
         <a href = "./webpages/lecture_list/index.html">Lecture List Page</a><br>
+        <a href = "./webpages/lecture_attendance_TEACHER/lecAttendTeach.html">Lecture Attendance TEACHER</a><br>
     </div>
 </body>
 </html>
