--- a/webpages/teacher_dashboard/index.html
+++ b/webpages/teacher_dashboard/index.html
@@ -6,6 +6,7 @@
     <title>Teacher Dashboard</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../menu.css">
+    <link rel="stylesheet" href="../../tables.css">
     <script defer src = "../../menu.js"></script>
 </head>
 <body>
@@ -19,6 +20,7 @@
     <nav class = "navigation">
         <a class = "dashboard" href = "../teacher_dashboard/index.html">Dashboard</a>
         <a class = "myClasses" href = "../myClasses/index.html">My Classes</a>
+        <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
     </nav>
 
     <section class = "mainPage">
@@ -34,23 +36,33 @@
         <section class = "table panel">
             <div class = "heading">
                 <span class = "code" >Code</span>
-                <span class = "subject">Subject Name<span>
+                <span class = "subject">Subject Name</span>
+                <span class = "semester">Sem</span>
+                <span class = "section">Sec.</span>
             </div>
             <a class = "entry" href = "#">
                 <span class = "code">HSP101</span>
-                <span class = "subject">Communication Skills<span>
+                <span class = "subject">Communication Skills</span>
+                <span class = "semester">1</span>
+                <span class = "section">A</span>
             </a>
             <a class = "entry" href = "#">
                 <span class = "code">CST102</span>
-                <span class = "subject">Data Structure and Algorithms<span>
+                <span class = "subject">Data Structure and Algorithms</span>
+                <span class = "semester">2</span>
+                <span class = "section">B</span>
             </a>
             <a class = "entry" href = "#">
                 <span class = "code">ECT103</span>
-                <span class = "subject">Circuit Theory<span>
-                </a>
+                <span class = "subject">Circuit Theory</span>
+                <span class = "semester">1</span>
+                <span class = "section">C</span>
+            </a>
             <a class = "entry" href = "#">
                 <span class = "code">ECT101</span>
-                <span class = "subject">Digital Design<span>
+                <span class = "subject">Digital Design</span>
+                <span class = "semester">1</span>
+                <span class = "section">A</span>
             </a>
         </section>
     </section>
