--- a/webpages/lecture_list/index.html
+++ b/webpages/lecture_list/index.html
@@ -6,6 +6,7 @@
     <title>Lecture List</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../menu.css">
+    <link rel="stylesheet" href="../../tables.css">
     <script defer src = "../../menu.js"></script>
 </head>
 <body>
@@ -17,11 +18,14 @@
     </header>
 
     <nav class = "navigation">
+        <a class = "dashboard" href = "../teacher_dashboard/index.html">Dashboard</a>
+        <a class = "myClasses" href = "../myClasses/index.html">My Classes</a>
         <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
     </nav>
     
     <section class = "mainPage">
         <h1 class = "subjectName">ECT103 - Circuit Theory</h1>
+        <h2 class = "section">Section A</h2>
         <button class = "scheduleLecture">Schedule Lecture</button>
 
         <section class = "table panel">
