updated naming and links

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
     </nav>
 
-    <div>
-        <a href = "./webpages/teacher_dashboard/index.html">Teacher Dashboard</a><br>
-        <a href = "./webpages/login/index.html">Login Page</a><br>
-        <a href = "./webpages/lecture_list/index.html">Lecture List Page</a><br>
-        <a href = "./webpages/lecture_attendance_TEACHER/lecAttendTeach.html">Lecture Attendance TEACHER</a><br>
+    <div class = "mainPage panel">
+        <a href = "./webpages/teacher_dashboard/teacher_dashboard.html">Teacher Dashboard</a>
+        <a href = "./webpages/login/login.html">Login Page</a>
+        <a href = "./webpages/lecture_list/lecture_list.html">Lecture List Page</a>
+        <a href = "./webpages/lecture_attendance_TEACHER/lecAttendTeach.html">Lecture Attendance TEACHER</a>
     </div>
 </body>
 </html>
