--- a/webpages/lecture_attendance_TEACHER/lecAttendTeach.html
+++ b/webpages/lecture_attendance_TEACHER/lecAttendTeach.html
@@ -18,9 +18,9 @@
     </header>
 
     <nav class = "navigation">
-        <a class = "dashboard" href = "../teacher_dashboard/index.html">Dashboard</a>
-        <a class = "myClasses" href = "../myClasses/index.html">My Classes</a>
-        <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
+        <a class = "dashboard" href = "../teacher_dashboard/teacher_dashboard.html">Dashboard</a>
+        <a class = "myClasses" href = "../myClasses/lecture_list.html">My Classes</a>
+        <a class = "aboutUs" href = "../../index.html">About Us</a>
     </nav>
     
     <!-- Actual code starts from here -->
