--- a/webpages/lecture_list/lecture_list.html
+++ b/webpages/lecture_list/lecture_list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture List</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="lecture_list.css">
     <link rel="stylesheet" href="../../menu.css">
     <link rel="stylesheet" href="../../tables.css">
     <script defer src = "../../menu.js"></script>
@@ -18,9 +18,9 @@
     </header>
 
     <nav class = "navigation">
-        <a class = "dashboard" href = "../teacher_dashboard/index.html">Dashboard</a>
-        <a class = "myClasses" href = "../myClasses/index.html">My Classes</a>
-        <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
+        <a class = "dashboard" href = "../teacher_dashboard/teacher_dashboard.html">Dashboard</a>
+        <a class = "myClasses" href = "../myClasses/lecture_list.html">My Classes</a>
+        <a class = "aboutUs" href = "../../index.html">About Us</a>
     </nav>
     
     <section class = "mainPage">
