--- a/webpages/login/login.html
+++ b/webpages/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="../../menu.css">
     <script defer src = "../../menu.js"></script>
 </head>
@@ -17,7 +17,7 @@
     </header>
 
     <nav class = "navigation">
-        <a class = "aboutUs" href = "../teacher_dashboard/">About Us</a>
+        <a class = "aboutUs" href = "../../index.html">About Us</a>
     </nav>
 
     <div class = "mainPage">
