removed SECTION support, will add later

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <div class = "mainPage panel">
         <a href = "./webpages/teacher_dashboard/teacher_dashboard.html">Teacher Dashboard</a>
+        <a href = "./webpages/student_dahboard/student_dashboard.html">Student Dashboard</a>
         <a href = "./webpages/login/login.html">Login Page</a>
         <a href = "./webpages/lecture_list/lecture_list.html">Lecture List Page</a>
         <a href = "./webpages/lecture_attendance_TEACHER/lecAttendTeach.html">Lecture Attendance TEACHER</a>
