--- a/webpages/lecture_attendance_TEACHER/lecAttendTeach.html
+++ b/webpages/lecture_attendance_TEACHER/lecAttendTeach.html
@@ -26,14 +26,14 @@
     <!-- Actual code starts from here -->
     <section class = "mainPage">
         <h1 class = "subjectName">ECT103 - Circuit Theory</h1>
-        <h2 class = "lectureNumber">Lecture 1 - Section A</h2>
+        <h2 class = "lectureNumber">Lecture 1<!-- - Section A--></h2>
         <!-- Insert your QR in this div -->
         <div class = " QRcontainer panel" >
             <div class = "detailsContainer">
                 <h3>Class details: </h3>
                 <div class = "line"></div>
                 <div class = "details">
-                    <p>Section: <span>A</span></p>
+                    <!-- <p>Section: <span>A</span></p> -->
                     <p>Date: <span>16/01/2024</span></p>
                     <p>Time: <span>10:00</span></p>
                 </div>
