--- a/webpages/student_dahboard/student_dashboard.html
+++ b/webpages/student_dahboard/student_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Dashboard</title>
-    <link rel="stylesheet" href="teacher_dashboard.css">
+    <link rel="stylesheet" href="student_dashboard.css">
     <link rel="stylesheet" href="../../menu.css">
     <link rel="stylesheet" href="../../tables.css">
     <script defer src = "../../menu.js"></script>
@@ -27,9 +27,9 @@
         <section class = "profile panel">
             <img class = "profilePic" src = "images/temp.png" alt="Your Profile Pic">
             <div class = "profileText">
-                <div class = "name">John Doe</div>
-                <div class = "designation">Assistant Professor</div>
-                <div class = "department">Department of CSE</div>
+                <div class = "name">Sarthak Singh Tariyal</div>
+                <div class = "studentID">2023KUEC2016</div>
+                <div class = "department">CSE</div>
             </div>
         </section>
         
