did some more work idk what

--- a/webpages/lecture_attendance_STUDENT/lecAttendStudent.html
+++ b/webpages/lecture_attendance_STUDENT/lecAttendStudent.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture List</title>
-    <link rel="stylesheet" href="lecture_list.css">
+    <link rel="stylesheet" href="lecAttendStudent.css">
     <link rel="stylesheet" href="../../menu.css">
     <link rel="stylesheet" href="../../tables.css">
     <script defer src = "../../menu.js"></script>
@@ -26,38 +26,43 @@
     <section class = "mainPage">
         <h1 class = "subjectName">ECT103 - Circuit Theory</h1>
         <!-- <h2 class = "section">Section A</h2> -->
-        <button class = "scheduleLecture">Schedule Lecture</button>
-
+        <button class = "markAttendance">Mark Attendance</button>
+        <h4 class = "totalAttendance">Total Attedance: NA</h4>
         <section class = "table panel">
-            <div class = "heading">
+            <div class = "heading entry">
                 <span class = "lectureNumber">Lec No.</span>
                 <span class = "lectureTitle">Title</span>
                 <span class = "date">Date</span>
                 <span class = "time">Time</span>
+                <span class = "attendance">Att.</span>
             </div>
-            <a class = "entry" href = "../lecture_attendance_TEACHER/lecAttendTeach.html">
+            <a class = "entry" href = "#">
                 <span class = "lectureNumber">1</span>
                 <span class = "lectureTitle">Introduction to Semiconductors</span>
                 <span class = "date">16/02/2024</span>
                 <span class = "time">10:00</span>
+                <span class = "attendance">P</span>
             </a>
-            <a class = "entry" href = "../lecture_attendance_TEACHER/lecAttendTeach.html">
+            <a class = "entry" href = "#">
                 <span class = "lectureNumber">1</span>
                 <span class = "lectureTitle">Introduction to Semiconductors</span>
                 <span class = "date">16/02/2024</span>
                 <span class = "time">10:00</span>
+                <span class = "attendance">A</span>
             </a>
-            <a class = "entry" href = "../lecture_attendance_TEACHER/lecAttendTeach.html">
+            <a class = "entry" href = "#">
                 <span class = "lectureNumber">1</span>
                 <span class = "lectureTitle">Introduction to Semiconductors</span>
                 <span class = "date">16/02/2024</span>
                 <span class = "time">10:00</span>
+                <span class = "attendance">P</span>
             </a>
-            <a class = "entry" href = "../lecture_attendance_TEACHER/lecAttendTeach.html">
+            <a class = "entry" href = "#">
                 <span class = "lectureNumber">1</span>
                 <span class = "lectureTitle">Introduction to Semiconductors</span>
                 <span class = "date">16/02/2024</span>
                 <span class = "time">10:00</span>
+                <span class = "attendance">A</span>
             </a>
         </section>
     </section>
