--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href = "./webpages/login/login.html">Login Page</a>
         <a href = "./webpages/lecture_list/lecture_list.html">Lecture List Page</a>
         <a href = "./webpages/lecture_attendance_TEACHER/lecAttendTeach.html">Lecture Attendance TEACHER</a>
+        <a href = "./webpages/lecture_attendance_STUDENT/lecAttendStudent.html">Lecture Attendance STUDENT</a>
     </div>
 </body>
 </html>
