--- a/webpages/teacher_dashboard/teacher_dashboard.html
+++ b/webpages/teacher_dashboard/teacher_dashboard.html
@@ -40,25 +40,25 @@
                 <span class = "semester">Sem</span>
                 <!-- <span class = "section">Sec.</span> -->
             </div>
-            <a class = "entry" href = "#">
+            <a class = "entry" href = "../lecture_list/lecture_list.html">
                 <span class = "code">HSP101</span>
                 <span class = "subject">Communication Skills</span>
                 <span class = "semester">1</span>
                 <!-- <span class = "section">A</span> -->
             </a>
-            <a class = "entry" href = "#">
+            <a class = "entry" href = "../lecture_list/lecture_list.html">
                 <span class = "code">CST102</span>
                 <span class = "subject">Data Structure and Algorithms</span>
                 <span class = "semester">2</span>
                 <!-- <span class = "section">B</span> -->
             </a>
-            <a class = "entry" href = "#">
+            <a class = "entry" href = "../lecture_list/lecture_list.html">
                 <span class = "code">ECT103</span>
                 <span class = "subject">Circuit Theory</span>
                 <span class = "semester">1</span>
                 <!-- <span class = "section">C</span> -->
             </a>
-            <a class = "entry" href = "#">
+            <a class = "entry" href = "../lecture_list/lecture_list.html">
                 <span class = "code">ECT101</span>
                 <span class = "subject">Digital Design</span>
                 <span class = "semester">1</span>
