Moved Mark Attendance button to student dashboard

--- a/webpages/student_dahboard/student_dashboard.html
+++ b/webpages/student_dahboard/student_dashboard.html
@@ -32,6 +32,8 @@
             </div>
         </section>
         
+        <button class = "markAttendance">Mark Attendance</button>
+        
         <section class = "table panel">
             <div class = "heading">
                 <span class = "code" >Code</span>
