started work on admin page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </nav>
 
     <div class = "mainPage panel">
+        <a href = "./webpages/admin/admin.html">Admin Page</a>
         <a href = "./webpages/teacher_dashboard/teacher_dashboard.html">Teacher Dashboard</a>
         <a href = "./webpages/student_dahboard/student_dashboard.html">Student Dashboard</a>
         <a href = "./webpages/login/login.html">Login Page</a>
