--- a/webpages/admin/pages/addSubject/addSubject.html
+++ b/webpages/admin/pages/addSubject/addSubject.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="addSubject.css">
+    <link rel="stylesheet" href="../../dropDown.css">
     <link rel="stylesheet" href="../../../../menu.css">
     <link rel="stylesheet" href="../../../../tables.css">
     <script defer src = "../../../../menu.js"></script>
@@ -41,5 +42,15 @@
         <a class = "aboutUs" href = "../../../../index.html">About Us</a>
     </nav>
 
+    <section class = "mainPage">
+        <h1 class = "title">Add a Subject</h1>
+        <form class = "addSubject">
+            <label for = "subjectCode" class = "text">Enter Subject Code</label>
+            <input id = "subjectCode" type = "text" class = "box">
+            <label for = "subjectName" class = "text">Enter Subject Name</label>
+            <input id = "subjectName" type = "text" class = "box">
+            <input type="submit" value="Submit" id = "submit">
+        </form>
+    </section>
 </body>
 </html>
