--- a/webpages/admin/admin.html
+++ b/webpages/admin/admin.html
@@ -20,14 +20,14 @@
     </header>
 
     <nav class = "navigation">
-        <a class = "dashboard" href = "admin.html">Dashboard</a>
+        <a class = "dashboard toForm" href = "admin.html">Dashboard</a>
 
         <div class="dropdown item">
             <button class="dropbtn">Add</button>
             <div class="dropdown-content">
                 <a href="#" class = "addSubject toForm">Subject</a>
-                <a href="#" class = "addStudent toForm">Student</a>
                 <a href="#" class = "addTeacher toForm">Teacher</a>
+                <a href="#" class = "addStudent toForm">Student</a>
             </div>
         </div>
 
@@ -35,8 +35,16 @@
             <button class="dropbtn">Remove</button>
             <div class="dropdown-content">
               <a href="#" class = "removeSubject toForm">Subject</a>
-              <a href="#" class = "removeStudent toForm">Student</a>
               <a href="#" class = "removeTeacher toForm">Teacher</a>
+              <a href="#" class = "removeStudent toForm">Student</a>
+            </div>
+        </div>
+
+        <div class="dropdown item">
+            <button class="dropbtn">Assign Subject to</button>
+            <div class="dropdown-content">
+                <a href="#" class = "assignTeacher toForm">Teacher</a>
+              <a href="#" class = "assignStudent toForm">Student</a>
             </div>
         </div>
 
@@ -44,8 +52,21 @@
     </nav>
 
     <!-- The order of items in "dropdown-content" class must be same as the html content  -->
+    <!-- Dashboard -->
+    <!-- please be careful using the 'form' class for this, i couldnt think of another way to change the code -->
+    <section class = "mainPage form" id = "adminDashboard">
+        <section class = "profile panel">
+            <img class = "profilePic" src = "temp.png" alt="Your Profile Pic">
+            <div class = "profileText">
+                <div class = "name">John Doe</div>
+                <div class = "designation">Assistant Professor</div>
+                <div class = "department">Department of CSE</div>
+            </div>
+        </section>
+    </section>
+
     <!-- Add Subject -->
-    <section class = "mainPage addSubjectForm form">
+    <section class = "form">
         <h1 class = "title">Add a Subject</h1>
         <form class = "addSubject">
             <label for = "subjectCode" class = "text">Subject Code</label>
@@ -56,24 +77,8 @@
         </form>
     </section>
 
-    <!-- Add Student -->
-    <section class = "mainPage addStudentForm form">
-        <h1 class = "title">Add a Student</h1>
-        <form class = "addStudent">
-            <label for = "studentName" class = "text">Students Name</label>
-            <input id = "studentName" type = "text" class = "box">
-            <label for = "studentID" class = "text">Student ID</label>
-            <input id = "studentID" type = "text" class = "box">
-            <label for = "studentPassword" class = "text">Password</label>
-            <input id = "studentPassword" type = "password" class = "box">
-            <label for = "studentConfirmPassword" class = "text">Confirm Password</label>
-            <input id = "studentConfirmPassword" type = "password" class = "box">
-            <button id = "submit">Add</button>
-        </form>
-    </section>
-
     <!-- Add Teacher -->
-    <section class = "mainPage addTeacher form">
+    <section class = "form">
         <h1 class = "title">Add a Teacher</h1>
         <form class = "addTeacher">
             <label for = "teacherName" class = "text">Teachers Name</label>
@@ -88,8 +93,24 @@
         </form>
     </section>
 
+    <!-- Add Student -->
+    <section class = "form">
+        <h1 class = "title">Add a Student</h1>
+        <form class = "addStudent">
+            <label for = "studentName" class = "text">Students Name</label>
+            <input id = "studentName" type = "text" class = "box">
+            <label for = "studentID" class = "text">Student ID</label>
+            <input id = "studentID" type = "text" class = "box">
+            <label for = "studentPassword" class = "text">Password</label>
+            <input id = "studentPassword" type = "password" class = "box">
+            <label for = "studentConfirmPassword" class = "text">Confirm Password</label>
+            <input id = "studentConfirmPassword" type = "password" class = "box">
+            <button id = "submit">Add</button>
+        </form>
+    </section>
+
     <!-- Remove Subject -->
-    <section class = "mainPage removeSubject form">
+    <section class = "form">
         <h1 class = "title">Remove a Subject</h1>
         <form class = "removeSubject">
             <label for = "subjectName" class = "text">Select subject to remove</label>
@@ -102,22 +123,8 @@
         </form>
     </section>
 
-    <!-- Remove Student  -->
-    <section class = "mainPage removeStudent form">
-        <h1 class = "title">Remove a Student</h1>
-        <form class = "removeStudent">
-            <label for = "subjectName" class = "text">Select student to remove</label>
-            <select class = "selectList">
-                <option value = "2023KUEC2016">2023KUEC2016</option>
-                <option value = "2023KUEC2002">2023KUEC2002</option>
-                <option value = "2023KUCP1010">2023KUCP1010</option>
-            </select>
-            <button id = "submit">Remove</button>
-        </form>
-    </section>
-
     <!-- Remove Teacher -->
-    <section class = "mainPage removeTeacher form">
+    <section class = "form">
         <h1 class = "title">Remove a Teacher</h1>
         <form class = "removeTeacher">
             <label for = "teacherName" class = "text">Select teacher to remove</label>
@@ -130,6 +137,59 @@
         </form>
     </section>
 
+    <!-- Remove Student  -->
+    <section class = "form">
+        <h1 class = "title">Remove a Student</h1>
+        <form class = "removeStudent">
+            <label for = "studentID" class = "text">Select student to remove</label>
+            <select class = "selectList">
+                <option value = "2023KUEC2016">2023KUEC2016</option>
+                <option value = "2023KUEC2002">2023KUEC2002</option>
+                <option value = "2023KUCP1010">2023KUCP1010</option>
+            </select>
+            <button id = "submit">Remove</button>
+        </form>
+    </section>
+
+    <!-- Assign Teacher to Subject -->
+    <section class = "form">
+        <h1 class = "title">Assign Subject to Teacher</h1>
+        <form class = "assignTeacher">
+            <label for = "teacherName" class = "text">Select Teacher</label>
+            <select class = "selectList">
+                <option value = "example-1">John Doe</option>
+                <option value = "example-2">Lorem Ipsum</option>
+                <option value = "example-3">Doe John Ipsum Lorem</option>
+            </select>
+            <label for="subjectName" class = "text">Select Subject to Assign</label>
+            <select class = "selectList">
+                <option value = "CSP101">CSP101</option>
+                <option value = "CSP102">CSP102</option>
+                <option value = "ECT101">ECT101</option>
+            </select>
+            <button id = "submit">Assign</button>
+        </form>
+    </section>
+
+    <!-- Assign Student to Subject  -->
+    <section class = "form">
+        <h1 class = "title">Assign Subject to Student</h1>
+        <form class = "assignStudent">
+            <label for = "studentID" class = "text">Select Student</label>
+            <select class = "selectList">
+                <option value = "2023KUEC2016">2023KUEC2016</option>
+                <option value = "2023KUEC2002">2023KUEC2002</option>
+                <option value = "2023KUCP1010">2023KUCP1010</option>
+            </select>
+            <label for="subjectName" class = "text">Select Subject to Assign</label>
+            <select class = "selectList">
+                <option value = "CSP101">CSP101</option>
+                <option value = "CSP102">CSP102</option>
+                <option value = "ECT101">ECT101</option>
+            </select>
+            <button id = "submit">Assign</button>
+        </form>
+    </section>
 
 </body>
 </html>
