Changed Login page

--- a/webpages/admin/admin.html
+++ b/webpages/admin/admin.html
@@ -12,7 +12,7 @@
     <script defer src = "../../menu.js"></script>
 </head>
 <body>
-    <header class = "header">
+    <header class = "header ADMIN">
         <button class = "hamburger">
             <div class = "navbar"></div>
         </button>
@@ -55,7 +55,7 @@
     <!-- Dashboard -->
     <!-- please be careful using the 'form' class for this, i couldnt think of another way to change the code -->
     <section class = "mainPage form" id = "adminDashboard">
-        <section class = "profile panel">
+        <section class = "profile panel ADMIN">
             <img class = "profilePic" src = "temp.png" alt="Your Profile Pic">
             <div class = "profileText">
                 <div class = "name">John Doe</div>
