--- a/webpages/login/login.html
+++ b/webpages/login/login.html
@@ -9,7 +9,7 @@
     <script defer src = "../../menu.js"></script>
 </head>
 <body>
-    <header class = "header">
+    <header class = "header login">
         <button class = "hamburger">
             <div class = "navbar"></div>
         </button>
