Rehauled all pages, Design is pretty much complete and ready to work with

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class = "header">
-        <button class = "hamburger">
+        <button class = "hamburger" id = "adminHamburger">
             <div class = "navbar"></div>
         </button>
         <!-- <button class = "logOut">Log Out</button> -->
