--- a/webpages/login/login.html
+++ b/webpages/login/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="login.css">
+    <script defer src = "login.js"></script>
     <link rel="stylesheet" href="../../menu.css">
     <script defer src = "../../menu.js"></script>
 </head>
@@ -20,9 +21,13 @@
         <a class = "aboutUs" href = "../../index.html">About Us</a>
     </nav>
 
-    <div class = "mainPage">
+    <!-- I will be hiding mainPage class to make everything work in one page
+        , so make sure to change classess/names for forms of respective login containers  -->
+
+    <!-- Student Login  -->
+    <div class = "mainPage active" id = "studentLogin">
         <div class = "loginContainer">
-            <div class = "loginText">Login</div>
+            <div class = "loginText">Student Login</div>
             <form class = "loginInput">
                 <div class = "email">
                     <label for="fname" class = "text">Email</label>
@@ -34,7 +39,62 @@
                 </div>
             </form>
             <button class = "loginButton">Login</button>
+
+            <div class = "notA">Not a Student?</div>
+            <div class = "otherLoginBtns">
+                <a class = "teacherLoginBtn">Teacher login</a>
+                <a class = "adminLoginBtn">Admin login</a>
+            </div>
         </div>
     </div>
+
+    <!-- Teacher Login  -->
+    <div class = "mainPage" id ="teacherLogin">
+        <div class = "loginContainer">
+            <div class = "loginText">Teacher Login</div>
+            <form class = "loginInput">
+                <div class = "email">
+                    <label for="fname" class = "text">Email</label>
+                    <input type="text" id="fname" name="fname" class = "box">
+                </div> 
+                <div class = "password">
+                    <label for="lname" class = "text">Password</label>
+                    <input type="password" id="lname" name="lname" class = "box">
+                </div>
+            </form>
+            <button class = "loginButton">Login</button>
+
+            <div class = "notA">Not a Teacher?</div>
+            <div class = "otherLoginBtns">
+                <a class = "studentLoginBtn">Student login</a>
+                <a class = "adminLoginBtn">Admin login</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Admin Login  -->
+    <div class = "mainPage" id ="adminLogin">
+        <div class = "loginContainer">
+            <div class = "loginText">Admin Login</div>
+            <form class = "loginInput">
+                <div class = "email">
+                    <label for="fname" class = "text">Email</label>
+                    <input type="text" id="fname" name="fname" class = "box">
+                </div> 
+                <div class = "password">
+                    <label for="lname" class = "text">Password</label>
+                    <input type="password" id="lname" name="lname" class = "box">
+                </div>
+            </form>
+            <button class = "loginButton">Login</button>
+
+            <div class = "notA">Not an Admin?</div>
+            <div class = "otherLoginBtns">
+                <a class = "studentLoginBtn">Student login</a>
+                <a class = "teacherLoginBtn">Teacher login</a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
