Added About Us page, updated linking for About Us in menu

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <a href = "./webpages/lecture_list/lecture_list.html">Lecture List Page</a>
         <a href = "./webpages/lecture_attendance_TEACHER/lecAttendTeach.html">Lecture Attendance TEACHER</a>
         <a href = "./webpages/lecture_attendance_STUDENT/lecAttendStudent.html">Lecture Attendance STUDENT</a>
+        <a href = "./webpages/aboutUs/aboutUs.html">About Us</a>
     </div>
 </body>
 </html>
