--- a/webpages/admin/admin.html
+++ b/webpages/admin/admin.html
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <a class = "aboutUs" href = "../../index.html">About Us</a>
+        <a class = "aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
     </nav>
 
     <!-- The order of items in "dropdown-content" class must be same as the html content  -->
