--- a/webpages/login/login.html
+++ b/webpages/login/login.html
@@ -18,7 +18,7 @@
     </header>
 
     <nav class = "navigation">
-        <a class = "aboutUs" href = "../../index.html">About Us</a>
+        <a class = "aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
     </nav>
 
     <!-- I will be hiding mainPage class to make everything work in one page
