--- a/webpages/lecture_attendance_STUDENT/lecAttendStudent.html
+++ b/webpages/lecture_attendance_STUDENT/lecAttendStudent.html
@@ -19,7 +19,7 @@
 
     <nav class = "navigation">
         <a class = "dashboard" href = "../student_dahboard/student_dashboard.html">Dashboard</a>
-        <a class = "aboutUs" href = "../../index.html">About Us</a>
+        <a class = "aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
     </nav>
     
     <section class = "mainPage">
