--- a/webpages/lecture_attendance_TEACHER/lecAttendTeach.html
+++ b/webpages/lecture_attendance_TEACHER/lecAttendTeach.html
@@ -20,7 +20,7 @@
     <nav class = "navigation">
         <a class = "dashboard" href = "../teacher_dashboard/teacher_dashboard.html">Dashboard</a>
         <a class = "lectureList" href = "../lecture_list/lecture_list.html">Lecture List</a>
-        <a class = "aboutUs" href = "../../index.html">About Us</a>
+        <a class = "aboutUs" href = "../aboutUs/aboutUs.html">About Us</a>
     </nav>
     
     <!-- Actual code starts from here -->
